# VShell

./: README.md  flake.nix  meson.build
src/: apprunner.vala  audioicon.vala  bar.vala  barplayer.vala  bluetoothicon.vala  circularprogress.vala  main.vala  meson.build  networkicon.vala  vshell.gresource.xml
src/scss/: main.scss  meson.build
src/scss/widgets/: bar.scss  notifications.scss  quicksettings.scss
src/ui/: bar.blp  meson.build  runner-app-item.blp  runner.blp
